# oyomu

./: .gitignore  .ocamlformat  .syomurc  CHANGELOG.md  Makefile  README.md  README.oyomu.md  README.suyomu.md  dune-project  oyomu.opam  yomu.opam
lib/cbindings/: cbindings.ml  chafa.ml  display.ml  dune  libc.ml  magickWand.ml  osInfo.ml  termove.ml  winsize.ml
lib/cbindings/config/: discover.ml  dune
lib/cbindings/core/: callback.c  callback.h  caml_chafa.c  caml_libc.c  caml_magickWand.c  caml_osInfo.c  caml_termove.c  caml_termove.h  caml_winsize.c  caml_winsize.h  comic.c  comic.h  display.c  display.h  termove.c  termove.h
lib/commandline/: add.ml  commandline.ml  config.ml  dune  init.ml  read.ml  test.ml
lib/commandline/cmdcollection/: add.ml  cadd.ml  cdecrypt.ml  cdelete.ml  cinit.ml  clist.ml  cmdcollection.ml  cread.ml  crename.ml  dune
lib/commandline/cmdcommon/: cmdcommon.ml  dune
lib/commandline/cmdconfig/: cedit.ml  cmdconfig.ml  dune
lib/libyomu/: app.ml  ccallback.ml  collection.ml  comic.ml  config.ml  czip.ml  drawing.ml  dune  encryption.ml  epub.ml  error.ml  html.ml  initialization.ml  input.ml  item.ml  keys.ml  libyomu.ml  namedArchive.ml  pixel.ml  syomu.ml  zipper.ml
lib/util/: dune  util.ml
man/: dune
misc/completions/: oyomu.fish
test/: dune
