;**********************************************************************************************;
;*                                                                                            *;
;* This file is part of Yomu: A comic reader                                                  *;
;* Copyright (C) 2023 Yves Ndiaye                                                             *;
;*                                                                                            *;
;* Yomu is free software: you can redistribute it and/or modify it under the terms            *;
;* of the GNU General Public License as published by the Free Software Foundation,            *;
;* either version 3 of the License, or (at your option) any later version.                    *;
;*                                                                                            *;
;* Yomu is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY;          *;
;* without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR           *;
;* PURPOSE.  See the GNU General Public License for more details.                             *;
;* You should have received a copy of the GNU General Public License along with Yomu.         *;
;* If not, see <http://www.gnu.org/licenses/>.                                                *;
;*                                                                                            *;
;**********************************************************************************************;

(rule
 (with-stdout-to
  oyomu.1
  (run %{bin:oyomu} --help=groff)))

(install
 (section man)
 (files oyomu.1))

(rule
 (with-stdout-to
  oyomu-read.1
  (run %{bin:oyomu} read --help=groff)))

(install
 (section man)
 (files oyomu-read.1))

(rule
 (with-stdout-to
  oyomu-collection.1
  (run %{bin:oyomu} collection --help=groff)))

(install
 (section man)
 (files oyomu-collection.1))

(rule
 (with-stdout-to
  oyomu-collection-add.1
  (run %{bin:oyomu} collection add --help=groff)))

(install
 (section man)
 (files oyomu-collection-add.1))

(rule
 (with-stdout-to
  oyomu-collection-delete.1
  (run %{bin:oyomu} collection delete --help=groff)))

(install
 (section man)
 (files oyomu-collection-delete.1))

(rule
 (with-stdout-to
  oyomu-collection-init.1
  (run %{bin:oyomu} collection init --help=groff)))

(install
 (section man)
 (files oyomu-collection-init.1))

(rule
 (with-stdout-to
  oyomu-collection-list.1
  (run %{bin:oyomu} collection list --help=groff)))

(install
 (section man)
 (files oyomu-collection-list.1))

(rule
 (with-stdout-to
  oyomu-collection-read.1
  (run %{bin:oyomu} collection read --help=groff)))

(install
 (section man)
 (files oyomu-collection-read.1))

(rule
 (with-stdout-to
  oyomu-collection-decrypt.1
  (run %{bin:oyomu} collection decrypt --help=groff)))

(install
 (section man)
 (files oyomu-collection-decrypt.1))

(rule
 (with-stdout-to
  oyomu-collection-rename.1
  (run %{bin:oyomu} collection rename --help=groff)))

(install
 (section man)
 (files oyomu-collection-rename.1))
