;**********************************************************************************************;
;*                                                                                            *;
;* This file is part of Yomu: A comic reader                                                  *;
;* Copyright (C) 2023 Yves Ndiaye                                                             *;
;*                                                                                            *;
;* Yomu is free software: you can redistribute it and/or modify it under the terms            *;
;* of the GNU General Public License as published by the Free Software Foundation,            *;
;* either version 3 of the License, or (at your option) any later version.                    *;
;*                                                                                            *;
;* Yomu is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY;          *;
;* without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR           *;
;* PURPOSE.  See the GNU General Public License for more details.                             *;
;* You should have received a copy of the GNU General Public License along with Yomu.         *;
;* If not, see <http://www.gnu.org/licenses/>.                                                *;
;*                                                                                            *;
;**********************************************************************************************;

(include_subdirs unqualified)

(library
 (name cbindings)
 (libraries dune-configurator)
 ;  (install_c_headers display callback )
 (foreign_stubs
  (language c)
  (names
   caml_libc
   caml_osInfo
   caml_chafa
   caml_termove
   caml_winsize
   caml_magickWand)
  (flags
   (:include cflags_chafa.sexp)
   (:include cflags_MagickWand.sexp)
   (-fPIC)))
 (c_library_flags
  (:include clibrary_flags_chafa.sexp)
  (:include clibrary_flags_MagickWand.sexp)))

(rule
 (targets
  cflags_chafa.sexp
  clibrary_flags_chafa.sexp
  cflags_MagickWand.sexp
  clibrary_flags_MagickWand.sexp)
 (action
  (run ./config/discover.exe)))
